part five; removed btn classes from clear and submit buttons

--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
                 Other Notes:
                 <textarea></textarea>
             </div>
-            <input type="submit" class="btn1" value="Clear Form">
-            <input type="submit" class="btn2" value="Submit Form">
+            <input type="submit" value="Clear Form">
+            <input type="submit" value="Submit Form">
         </form>
         <hr>
         <h1>Directions</h1>
