added labels for first name, last name, and concern inputs

--- a/index.html
+++ b/index.html
@@ -35,15 +35,15 @@
         <form>
             <h2>Contact Form</h2>
             <div>
-                Your First Name:
+                <label for="firstname">Your First Name:</label>
                 <input type="text" name="firstname" id="firstname">
             </div>
             <div>
-                Your Last Name:
+                <label for="lastname">Your Last Name:</label>
                 <input type="text" name="lastname" id="lastname">
             </div>
             <div>
-                Concern or Issue:
+                <label for="concern">Concern or Issue:</label>
                 <select name="concern" id="concern">
                     <option value="1">missing product</option>
                     <option value="2">billing issue</option>
