--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
                 <a href="index.html">Home Page</a>
             </li>
             <li>
-                <a href="https://www.w3.org/WAI/fundamentals/accessibility-intro/">Link 2</a>
+                <a href="https://www.w3.org/WAI/fundamentals/accessibility-intro/">Intro to Web Accesibility</a>
             </li>
             <li>
-                <a href="https://www.w3.org/TR/WCAG21/">Link 3</a>
+                <a href="https://www.w3.org/TR/WCAG21/">WCAG Success Criteria List</a>
             </li>
         </ul>
     </div>
